external-crates/move/move-compiler/tests/move_2024/parser/ability_modifier_postfix_no_fields.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_postfix_no_fields.move:4:45
  │
4 │     public native struct Foo has copy, drop has store;
  │                                             ^^^
  │                                             │
  │                                             Unexpected 'has'
  │                                             Expected one of: ',', '{', '(', or ';'

