external-crates/move/move-compiler/tests/move_2024/parser/ability_modifier_postfix_no_fields.move
address 0x42 {
module M {
    // native structs cannot have suffix ability declarations.
    public native struct Foo has copy, drop has store;
}
}
